<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AR Botanical Garden</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_header">Navigation</string>
    <string name="TitleSplashScreen">The botanical garden  \n\t lovin it !</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="hello_world">Hello world!</string>
	<string name="hello">Hello World, ImageTextListViewActivity!</string>
    <string name="name">ListViewBaseAdapter</string>
    <string name="image">Thumbnail</string>
    <string-array name="trees_array">
        <item>Baobab</item>
        <item>Sapin</item>
        <item>Sequoia</item>
    </string-array>
        <string name="titleSplash">Loading app resources ...</string>
        <string name="Ready">App Ready</string>
        <string name="powered">Powered by Gr1 staff</string>
        <string name="arboretum">Bienvenue à l\'Arboretum</string>
        <string name="powered_fr">\@Copyright \"Groupe1 - M1 Miage\"</string>
        <string name="textDetection_fr">En Cours de Recherche d\'un HotSpot...</string>
        <string name="advice_fr">Placez votre tablette face à un arbre, une fois devant, une fenêtre contenant les informations relatives à cet arbre apparaîtra et durera suffisamment de temps pour que vous puissiez lire votre texte. De même, que vous pourrez activer/désactiver les voix. Vos cordonnées seront constamment affichées afin que vous sachiez où vous vous situez.</string>
        <string name="TitleSplashScreen_fr">Bienvenue à l\'Arboretum !</string>
        <string name="latitude_fr">Ma Latitude:</string>
        <string name="longitude_fr">Ma Longitude:</string>
        <string name="afficheLongLat_fr">Afficher Position</string>
        <string name="compass"></string>
        <string name="compass2"></string>
        <string name="bingoText"></string>
        <string name="treeDescription_fr"></string>
        <string name="treeInformationTitle_fr">Informations Arbre</string>
        <string name="tree_img"></string>
        <string name="arbre_img"></string>
        <string name="geoPosition_fr"></string>
        <string name="audio_icon"></string>
        <string name="recherche_manuelle_fr">Rechercher manuellement</string>
        <string name="music_icon"></string>
        <string name="listeArbres">Liste des Arbres</string>
        <string name="visiteGuidee">Visite Guidée</string>
        <string name="aPropos">A propos de nous</string>
        <string name="listArbresTitle">Arbres de l\'Arboretum</string>
        <string name="apropos">A Propos de Nous</string>
        <string name="TitleNavigation">Bonne Navigation !</string>
        

</resources>